# bcn-rainfall-api-client

./: CHANGELOG.md  README.md  config.yml  pyproject.toml
.github/workflows/: mypy.yml
bcn_rainfall_api_client/: __init__.py  client.py  config.py
bcn_rainfall_api_client/utils/: __init__.py  base_config.py  schemas.py
client/: __init__.py  client.py  config.py
client/utils/: __init__.py  schemas.py
